# ontology

./: README.md  docker-compose.yml  quickstart.md
apisix/conf/: config.yaml
common/: Dockerfile  build.sh  common.tar
dataps/: Dockerfile  build.sh
dataps/front/: .eslintrc.js  .prettierignore  .stylelintrc.js
dataps/modo-dataos-dataps-deploy/: Dockerfile  build.gradle  settings.gradle
links/: Dockerfile  build.sh  links.tar
links/modo-links/: __start.sh  application.yaml  logback.xml  stop.sh
mysql/init/: 0_create_extra_db.sql  2.dataos_mini_ontology_v1.0.0_mysql_init-20260107.sql  3_init_pro.sh
ontology/: Dockerfile  README.md  build.sh
ontology-backend/: .gitignore  Dockerfile  app.py  pyproject.toml
ontology-backend/apis/: models.py  ontology.py
ontology-backend/config/: __init__.py  config_loader.py
ontology-backend/docker/: docker-compose.dev.yml  docker-compose.yml  env.example
ontology-backend/public/: public_function.py
ontology-backend/utils/databases/: __init__.py  service_factory.py
ontology-backend/utils/databases/mysql/: example_usage.py  mysql_service.py
ontology-backend/utils/databases/postgres/: __init__.py  postgres_service.py
ontology-graph/: .dockerignore  .gitignore  app.py  pyproject.toml
ontology-graph/apis/: models.py  ontology.py
ontology-graph/config/: __init__.py  config_loader.py  config_models.py
ontology-graph/core/: batch_test_service.py  import_exceptions.py  import_task_service.py  task_manager.py
ontology-graph/core/ontology/: __init__.py  api_services.py  csv_to_ontology_json.py  ontology_migrate.py  rdf_services.py
ontology-graph/docker/: Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml  env.example
ontology-graph/public/: public_function.py  public_variable.py
ontology-graph/utils/: ontology_helpers.py
ontology-graph/utils/component/prompt_templates/: prompts.py
ontology-graph/utils/databases/: __init__.py  service_factory.py
ontology-graph/utils/databases/mysql/: README.md  __init__.py  mysql_service.py
ontology-graph/utils/databases/postgres/: __init__.py  models.py  postgres_service.py
ontology-graph/utils/databases/redis/: __init__.py  redis_service.py
ontology-sandbox/: Dockerfile  app.py  docker-compose.smoke.yml  export_openapi.py  pyproject.toml
ontology-sandbox/apis/: api_json_to_generator.py  models.py  object_apis.py
ontology-sandbox/config/: __init__.py  config_loader.py  config_models.py
ontology-sandbox/core/runtime/: base.py  context.py  executor.py  helpers.py  loader.py  registry.py
ontology-sandbox/docker/: start.sh
ontology-sandbox/mcp_service/: object_service.py  ontology_service.py
ontology-sandbox/public/: public_function.py
ontology-sandbox/routers/: actions.py  functions.py  models.py  service.py  utils.py
ontology/front/: .eslintignore  .prettierrc  .yarnrc  README.en.md  babel.config.js  commitlint.config.js  package-lock.json  package.json  postcss.config.js  readme.md  setupEnzyme.ts  shim.d.ts  tsconfig.eslint.json  tsconfig.json
ontology/ontology/: .gitignore  build.gradle  settings.gradle
ontology/ontology_deploy/: .gitignore  build.gradle  (+1 more)
(+1677 files in other folders)
