[tool.poetry]
name = "ontology_server"
version = "0.1.0"
description = ""
authors = ["yifanchang <yifanchang08@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
loguru = "^0.7.3"
aiomysql = "^0.2.0"
pymysql = "^1.1.1"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
cryptography = "^45.0.6"
sqlalchemy = "^2.0.43"
sqlmodel = "^0.0.24"
rdflib = "^7.1.4"
mcp = {extras = ["cli"], version = "^1.14.1"}
pycryptodome = "^3.23.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.11"
sqlparse = "^0.5.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"  # 将该源设置为默认源